view with delete

--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -72,4 +72,22 @@
         android:layout_marginLeft="44dp"
         android:layout_marginStart="44dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit"
+        android:id="@+id/buttonEdit"
+        android:layout_alignBottom="@+id/nameTxt"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:id="@+id/buttonDel"
+        android:layout_below="@+id/buttonEdit"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
