--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -4,7 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1"
-    android:background="#f8f9fe" >
+    android:background="#303031"
+    android:theme="@style/mytheme"
+    style="@style/mytheme">
     <!--  News Feed Button -->
     <Button
         android:id="@+id/add_event_but"
@@ -16,7 +18,8 @@
         android:layout_toRightOf="@+id/view_but"
         android:layout_toEndOf="@+id/view_but"
         android:layout_marginLeft="79dp"
-        android:layout_marginStart="79dp" />
+        android:layout_marginStart="79dp"
+        android:background="#303031" />
 
     <!--  Friends Button -->
     <Button
@@ -52,7 +55,7 @@
 
     <!--  Events Button -->
     <Button
-        android:id="@+id/btn_events"
+        android:id="@+id/btn_Profile"
         style="@style/DashboardButton"
         android:drawableTop="@drawable/id"
         android:layout_alignTop="@+id/settings_but"
@@ -60,7 +63,10 @@
         android:layout_alignStart="@+id/btn_messages"
         android:layout_alignBottom="@+id/settings_but"
         android:layout_alignRight="@+id/btn_messages"
-        android:layout_alignEnd="@+id/btn_messages" />
+        android:layout_alignEnd="@+id/btn_messages"
+        android:text="Edit Profile"
+        android:textSize="14dp"
+        android:typeface="normal" />
 
     <!--  Photos Button -->
     <Button
