--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -6,18 +6,11 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.example.user.projectse.NewEventActivity">
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#ff0000"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        android:background="#000000"
+        style="@style/mytheme">
 
     </android.support.design.widget.AppBarLayout>
 
@@ -30,5 +23,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_input_add" />
+
 
 </android.support.design.widget.CoordinatorLayout>
