--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/stdInstitude"
-        android:hint="Enter Univercity Name"
+        android:hint="Enter University Name"
         android:textColor="#000000"
         android:layout_below="@+id/stdName"
         android:layout_centerHorizontal="true" />
