--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/accent_material_dark_1</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -24,7 +21,12 @@
         <item name="android:drawablePadding">2dp</item>
         <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#ff29549f</item>
+        <item name="android:textColor">#ffffff</item>
         <item name="android:background">@null</item>
+        <item name="android:fadingEdgeLength">0dp</item>
+    </style>
+
+    <style name="mytheme" parent="Theme.AppCompat.NoActionBar" >
+        <item name="colorAccent">@color/accent_material_dark_1</item>
     </style>
 </resources>
