--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,9 @@
     <style name="mytheme" parent="Theme.AppCompat.NoActionBar" >
         <item name="colorAccent">@color/accent_material_dark_1</item>
     </style>
+
+    <style name="mythemedombo" parent="Theme.AppCompat.NoActionBar" >
+        <item name="colorAccent">@color/accent_material_dark_1</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
 </resources>
