--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -54,7 +54,8 @@
         android:hint="Enter Student Age"
         android:textColor="#000000"
         android:layout_below="@+id/stdDep"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:inputType="number" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -64,7 +65,8 @@
         android:textColor="#000000"
         android:layout_below="@+id/stdAge"
         android:layout_alignRight="@+id/stdName"
-        android:layout_alignEnd="@+id/stdName" />
+        android:layout_alignEnd="@+id/stdName"
+        android:inputType="textEmailAddress" />
 
     <CheckBox
         android:layout_width="wrap_content"
