--- a/app/src/main/res/layout/notification_activity.xml
+++ b/app/src/main/res/layout/notification_activity.xml
@@ -1,12 +1,123 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:layout_height="wrap_content"
+    android:rowCount="6"
+    android:columnCount="5"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:orientation="horizontal"
+    android:outlineProvider="paddedBounds"
+    style="@style/mytheme"
+    android:background="#232323"
+    android:scrollIndicators="left|right">
 
-    <TextView android:text="Show Notification Details Here..." android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/desc" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/type"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#00ffcc" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=":"
+        android:id="@+id/datelink"
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_margin="10dp"
+        android:textSize="15dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="small text"
+        android:id="@+id/date"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#fcfcfc" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=" at: "
+        android:id="@+id/timelink"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/time"
+        android:layout_row="1"
+        android:layout_column="1"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="title:"
+        android:id="@+id/titletext"
+        android:layout_row="4"
+        android:layout_column="0"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/titlet"
+        android:layout_row="4"
+        android:layout_column="1"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#00d0f5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text=" location: "
+        android:id="@+id/locationtxt"
+        android:layout_row="5"
+        android:layout_column="0"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/location"
+        android:layout_row="5"
+        android:layout_column="1"
+        android:textSize="15dp"
+        android:layout_margin="10dp"
+        android:textColor="#fefefe" />
+</GridLayout>
+
+
